--- a/css/cardEffects.css
+++ b/css/cardEffects.css
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   background-size: 100%;
   width: 100%;
-  height: 300px, auto;
+  height: 300px;
  
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 0px;
